k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simp123
  labels:
    app: simp123
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: simp123
